--- a/assets/css/style-lazer.css
+++ b/assets/css/style-lazer.css
@@ -7135,6 +7135,17 @@ p.text-spot {
     .nav-header ul li a {
       text-decoration: none; }
 
+.hero {
+  background: -moz-linear-gradient(45deg, #302b6c 0%, #53e3af 100%);
+  /* FF3.6-15 */
+  background: -webkit-linear-gradient(45deg, #302b6c 0%, #53e3af 100%);
+  /* Chrome10-25,Safari5.1-6 */
+  background: -o-linear-gradient(45deg, #302b6c 0%, #53e3af 100%);
+  background: linear-gradient(45deg, #302b6c 0%, #53e3af 100%);
+  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#302b6c', endColorstr='#53e3af',GradientType=1 );
+  /* IE6-9 fallback on horizontal gradient */ }
+
 .hero-home {
   width: 100%;
   height: 763px;
