--- a/assets/css/style-apartamentos.css
+++ b/assets/css/style-apartamentos.css
@@ -7469,15 +7469,51 @@ p.text-spot {
   background-size: cover; }
 
 .hero-129 {
+  background: -moz-linear-gradient(45deg, #302b6c 0%, #53e3af 100%);
+  /* FF3.6-15 */
+  background: -webkit-linear-gradient(45deg, #302b6c 0%, #53e3af 100%);
+  /* Chrome10-25,Safari5.1-6 */
+  background: -o-linear-gradient(45deg, #302b6c 0%, #53e3af 100%);
+  background: linear-gradient(45deg, #302b6c 0%, #53e3af 100%);
+  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#302b6c', endColorstr='#53e3af',GradientType=1 );
+  /* IE6-9 fallback on horizontal gradient */
   background-image: url("../img/hero-129.jpg"); }
 
 .hero-101 {
+  background: -moz-linear-gradient(45deg, #302b6c 0%, #53e3af 100%);
+  /* FF3.6-15 */
+  background: -webkit-linear-gradient(45deg, #302b6c 0%, #53e3af 100%);
+  /* Chrome10-25,Safari5.1-6 */
+  background: -o-linear-gradient(45deg, #302b6c 0%, #53e3af 100%);
+  background: linear-gradient(45deg, #302b6c 0%, #53e3af 100%);
+  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#302b6c', endColorstr='#53e3af',GradientType=1 );
+  /* IE6-9 fallback on horizontal gradient */
   background-image: url("../img/hero-101.jpg"); }
 
 .hero-62 {
+  background: -moz-linear-gradient(45deg, #302b6c 0%, #53e3af 100%);
+  /* FF3.6-15 */
+  background: -webkit-linear-gradient(45deg, #302b6c 0%, #53e3af 100%);
+  /* Chrome10-25,Safari5.1-6 */
+  background: -o-linear-gradient(45deg, #302b6c 0%, #53e3af 100%);
+  background: linear-gradient(45deg, #302b6c 0%, #53e3af 100%);
+  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#302b6c', endColorstr='#53e3af',GradientType=1 );
+  /* IE6-9 fallback on horizontal gradient */
   background-image: url("../img/hero-62.jpg"); }
 
 .hero-48 {
+  background: -moz-linear-gradient(45deg, #302b6c 0%, #53e3af 100%);
+  /* FF3.6-15 */
+  background: -webkit-linear-gradient(45deg, #302b6c 0%, #53e3af 100%);
+  /* Chrome10-25,Safari5.1-6 */
+  background: -o-linear-gradient(45deg, #302b6c 0%, #53e3af 100%);
+  background: linear-gradient(45deg, #302b6c 0%, #53e3af 100%);
+  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#302b6c', endColorstr='#53e3af',GradientType=1 );
+  /* IE6-9 fallback on horizontal gradient */
   background-image: url("../img/hero-48.jpg"); }
 
 .hero-info {
