--- a/assets/css/style-lazer.scss
+++ b/assets/css/style-lazer.scss
@@ -116,6 +116,7 @@ text-transform: uppercase;
 	background: $color-primary;
 	padding: 50px 0;
 	margin-bottom: 50px;
+	margin-top: 50px;
 }
 .local-title {
 	color: $color-secundary;
