--- a/assets/css/style-general.scss
+++ b/assets/css/style-general.scss
@@ -63,6 +63,12 @@ h2, .h2 {
 	text-transform: uppercase;
 	letter-spacing: 3.5px;
 	color: $grey-medium;
+	@media #{$mobile-l} {
+		font-size: 30px;
+	}
+}
+h4 {
+	font-family: $font-regular;
 }
 
 p {
@@ -289,6 +295,9 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#302b6c', end
 	padding: 50px 0;
 	margin-top: 50px;
 	margin-bottom: 50px;
+	@media #{$mobile-l} {
+		margin-bottom: 0;
+	}
 }
 
 // MIDIA
@@ -300,6 +309,14 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#302b6c', end
 }
 #ytplayer {
     margin-bottom: -6px;
+}
+.ytplayer {
+	width:911px;
+	height:627px;
+	@media #{$mobile-l} {
+		width: 100%;
+		height: 230px;
+	}
 }
 .midia-text {
 	font-family: $font-regular;
@@ -402,6 +419,10 @@ padding: 80px 0;
 }
 
 .nav-footer {
+	@media #{$mobile-l} {
+    	padding-left: 10px;
+		margin-bottom: 10px;
+	}
 	li {
 		list-style-type: none;
 		margin-bottom: 20px;
@@ -433,4 +454,7 @@ padding: 80px 0;
 	padding: 20px 100px;
 	background: #f5f5f5;
 	font-size: 14px;
+	@media #{$mobile-l} {
+		padding: 20px;
+	}
 }
