--- a/assets/css/style-apartamentos.css
+++ b/assets/css/style-apartamentos.css
@@ -6972,8 +6972,8 @@ h1, .h1 {
   letter-spacing: 5px; }
   @media only screen and (max-width: 425px) {
     h1, .h1 {
-      font-size: 25px;
-      letter-spacing: 3px; } }
+      font-size: 30px;
+      letter-spacing: 1px; } }
 
 h2, .h2 {
   font-family: "supermolotlight";
@@ -7504,6 +7504,10 @@ p.text-spot {
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#302b6c', endColorstr='#53e3af',GradientType=1 );
   /* IE6-9 fallback on horizontal gradient */
   background-image: url("../img/hero-129.jpg"); }
+  @media only screen and (max-width: 425px) {
+    .hero-129 {
+      background-image: url("../img/banners-hero-129-mobile.jpg");
+      background-position: center; } }
 
 .hero-101 {
   background: -moz-linear-gradient(45deg, #302b6c 0%, #53e3af 100%);
@@ -7516,6 +7520,10 @@ p.text-spot {
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#302b6c', endColorstr='#53e3af',GradientType=1 );
   /* IE6-9 fallback on horizontal gradient */
   background-image: url("../img/hero-101.jpg"); }
+  @media only screen and (max-width: 425px) {
+    .hero-101 {
+      background-image: url("../img/banners-hero-101-mobile.jpg");
+      background-position: center; } }
 
 .hero-62 {
   background: -moz-linear-gradient(45deg, #302b6c 0%, #53e3af 100%);
@@ -7528,6 +7536,10 @@ p.text-spot {
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#302b6c', endColorstr='#53e3af',GradientType=1 );
   /* IE6-9 fallback on horizontal gradient */
   background-image: url("../img/hero-62.jpg"); }
+  @media only screen and (max-width: 425px) {
+    .hero-62 {
+      background-image: url("../img/banners-hero-62-mobile.jpg");
+      background-position: center; } }
 
 .hero-48 {
   background: -moz-linear-gradient(45deg, #302b6c 0%, #53e3af 100%);
@@ -7540,6 +7552,10 @@ p.text-spot {
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#302b6c', endColorstr='#53e3af',GradientType=1 );
   /* IE6-9 fallback on horizontal gradient */
   background-image: url("../img/hero-48.jpg"); }
+  @media only screen and (max-width: 425px) {
+    .hero-48 {
+      background-image: url("../img/banners-hero-48-mobile.jpg");
+      background-position: center; } }
 
 .hero-info {
   margin: auto;
@@ -7593,18 +7609,30 @@ p.text-spot {
 .banner-pet_4 {
   background-image: url("../banners/banners-pet-4.jpg");
   background-size: cover; }
+  @media only screen and (max-width: 425px) {
+    .banner-pet_4 {
+      background-image: url("../banners/banners-pet-4-mobile.jpg"); } }
 
 .banner-pet_3 {
   background-image: url("../banners/banners-pet-3.jpg");
   background-size: cover; }
+  @media only screen and (max-width: 425px) {
+    .banner-pet_3 {
+      background-image: url("../banners/banners-pet-3-mobile.jpg"); } }
 
 .banner-pet_2 {
   background-image: url("../banners/banners-pet-2.jpg");
   background-size: cover; }
+  @media only screen and (max-width: 425px) {
+    .banner-pet_2 {
+      background-image: url("../banners/banners-pet-2-mobile.jpg"); } }
 
 .banner-pet_1 {
   background-image: url("../banners/banners-pet-1.jpg");
   background-size: cover; }
+  @media only screen and (max-width: 425px) {
+    .banner-pet_1 {
+      background-image: url("../banners/banners-pet-1-mobile.jpg"); } }
 
 .galeria-plantas {
   margin-bottom: 50px; }
