--- a/assets/css/style-apartamentos.css
+++ b/assets/css/style-apartamentos.css
@@ -7592,6 +7592,9 @@ p.text-spot {
   height: 306px;
   padding: 50px 0 0 30px;
   color: #fff; }
+  @media only screen and (max-width: 425px) {
+    .banner-pet {
+      margin-bottom: 20px; } }
 
 .banner-pet_title {
   font-size: 22px;
