Header menu mobile

--- a/assets/css/empreendimento.scss
+++ b/assets/css/empreendimento.scss
@@ -5,6 +5,11 @@
 	max-width: 909px;
 	margin-bottom: 50px;
 }
+.empreendimento-features {
+	width: 100%;
+	max-width: 900px;
+	margin: 0 auto;
+}
 .implantacao {
 	max-width: 1120px;
 	width: 100%;
