--- a/assets/css/empreendimento.css
+++ b/assets/css/empreendimento.css
@@ -7108,6 +7108,13 @@ p.text-spot {
     background: transparent url("../img/arrow-btn.svg") no-repeat;
     background-position: 100%; }
 
+.wraper {
+  position: relative;
+  overflow: hidden; }
+
+.content-none {
+  display: none; }
+
 .blue-line {
   width: 100%;
   height: 1px;
@@ -7124,22 +7131,141 @@ p.text-spot {
 
 .main-header {
   background: #302b6c;
-  padding: 10px 5%; }
+  padding: 10px 5%;
+  width: 100%; }
+  @media only screen and (max-width: 425px) {
+    .main-header {
+      padding: 10px 0; } }
 
-.nav-header ul li {
-  display: inline;
-  margin-left: 30px; }
-  .nav-header ul li a {
-    color: #fff; }
+.header-fixed {
+  position: fixed;
+  top: 0;
+  z-index: 800; }
+
+.navbar {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto; }
+  @media only screen and (max-width: 425px) {
+    .navbar {
+      padding: 0; } }
+
+@media only screen and (max-width: 425px) {
+  .brand {
+    width: 180px;
+    z-index: 999;
+    margin-left: 10px; } }
 
 .nav-header {
   margin-top: 20px; }
   .nav-header ul li {
+    display: inline;
+    margin-left: 30px;
     font-size: 16px;
     font-family: "supermolotregular";
     letter-spacing: 0.5px; }
+    @media only screen and (max-width: 425px) {
+      .nav-header ul li {
+        display: list-item;
+        margin-bottom: 30px; } }
     .nav-header ul li a {
-      text-decoration: none; }
+      text-decoration: none;
+      color: #fff; }
+  @media only screen and (max-width: 425px) {
+    .nav-header {
+      position: absolute;
+      margin-top: 0;
+      top: 0;
+      width: 100%;
+      height: 100vh;
+      padding-top: 200px;
+      background: #302b6c;
+      z-index: 10;
+      -webkit-transform: translateX(120%);
+      -ms-transform: translateX(120%);
+      transform: translateX(120%);
+      -webkit-transition: -webkit-transform 0.5s ease;
+      transition: -webkit-transform 0.5s ease;
+      -o-transition: transform 0.5s ease;
+      transition: transform 0.5s ease;
+      transition: transform 0.5s ease, -webkit-transform 0.5s ease; } }
+
+.nav-header_open {
+  -webkit-transform: translateX(0%);
+  -ms-transform: translateX(0%);
+  transform: translateX(0%); }
+
+#nav-icon1 {
+  width: 30px;
+  height: 30px;
+  position: relative;
+  margin-top: 5px;
+  right: 10px;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  -ms-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .5s ease-in-out;
+  -moz-transition: .5s ease-in-out;
+  -o-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+  cursor: pointer;
+  float: right;
+  z-index: 12;
+  display: none;
+  margin-right: 10px; }
+  @media only screen and (max-width: 425px) {
+    #nav-icon1 {
+      display: block; } }
+
+#nav-icon1 span {
+  display: block;
+  position: absolute;
+  height: 2px;
+  width: 100%;
+  background: #fff;
+  border-radius: 9px;
+  opacity: 1;
+  left: 0;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  -ms-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .25s ease-in-out;
+  -moz-transition: .25s ease-in-out;
+  -o-transition: .25s ease-in-out;
+  transition: .25s ease-in-out; }
+
+#nav-icon1 span:nth-child(1) {
+  top: 0px; }
+
+#nav-icon1 span:nth-child(2) {
+  top: 10px; }
+
+#nav-icon1 span:nth-child(3) {
+  top: 20px; }
+
+#nav-icon1.open span:nth-child(1) {
+  top: 10px;
+  -webkit-transform: rotate(135deg);
+  -moz-transform: rotate(135deg);
+  -o-transform: rotate(135deg);
+  -ms-transform: rotate(135deg);
+  transform: rotate(135deg); }
+
+#nav-icon1.open span:nth-child(2) {
+  opacity: 0;
+  left: -60px; }
+
+#nav-icon1.open span:nth-child(3) {
+  top: 10px;
+  -webkit-transform: rotate(-135deg);
+  -moz-transform: rotate(-135deg);
+  -o-transform: rotate(-135deg);
+  -ms-transform: rotate(-135deg);
+  transform: rotate(-135deg); }
 
 .hero {
   background: -moz-linear-gradient(45deg, #302b6c 0%, #53e3af 100%);
@@ -7351,6 +7477,11 @@ p.text-spot {
   width: 100%;
   max-width: 909px;
   margin-bottom: 50px; }
+
+.empreendimento-features {
+  width: 100%;
+  max-width: 900px;
+  margin: 0 auto; }
 
 .implantacao {
   max-width: 1120px;
