--- a/assets/css/style-general.scss
+++ b/assets/css/style-general.scss
@@ -202,6 +202,17 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#302b6c', end
 // MISC
 $shadow: 2px 2px 12px 3px rgba(48, 43, 108, 0.15);
 
+// BODY
+.wraper {
+    position: relative;
+    overflow: hidden;
+}
+
+.content-none {
+	display: none;
+}
+
+
 .blue-line {
 	width: 100%;
 	height: 1px;
@@ -220,34 +231,146 @@ $shadow: 2px 2px 12px 3px rgba(48, 43, 108, 0.15);
 .main-header {
 	background: $color-primary;
 	padding: 10px 5%;
+	width: 100%;
+  	@media #{$mobile-l} {
+  		padding: 10px 0;
+  	}
 }
-.nav-header {
-	ul {
-		li {
-			 display: inline;
-			 margin-left: 30px;
-			a {
-				color: $white;
-			}
-		}
-	}
+.header-fixed {
+	position: fixed;
+	top: 0;
+	z-index: 800;
+}
+.navbar {
+	width: 100%;
+	max-width: 1200px;
+	margin: 0 auto;
+	  @media #{$mobile-l} {
+	  	padding: 0;
+	  }
+}
+.brand {
+	  @media #{$mobile-l} {
+	  	width: 180px;
+	  	z-index: 999;
+	  	margin-left: 10px;
+	  }
+}
 
-}
 // NAVBAR
 .nav-header {
 	margin-top: 20px;
 	ul {
 		li {
+			display: inline;
+			margin-left: 30px;
 			font-size: 16px;
 			font-family: $font-regular;
 			letter-spacing: 0.5px;
+			   @media #{$mobile-l} {
+			   	display: list-item;
+			   	margin-bottom: 30px;
+			   }
 			a {
 				text-decoration: none;
+				color: $white;
 			}
 		}
 	}
+  @media #{$mobile-l} {
+    position: absolute;
+    margin-top: 0;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    padding-top: 200px;
+    background: $color-primary;
+    z-index: 10;
+    transform: translateX(120%);
+    transition: transform 0.5s ease;
+  }
 }
 
+.nav-header_open {
+  transform: translateX(0%);
+}
+
+
+#nav-icon1  {
+  width: 30px;
+  height: 30px;
+  position: relative;
+  margin-top: 5px;
+  right: 10px;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .5s ease-in-out;
+  -moz-transition: .5s ease-in-out;
+  -o-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+  cursor: pointer;
+  float: right;
+  z-index: 12;
+  display: none;
+  margin-right: 10px;
+    @media #{$mobile-l} {
+      display: block;
+    }
+}
+
+#nav-icon1 span {
+  display: block;
+  position: absolute;
+  height: 2px;
+  width: 100%;
+  background: #fff;
+  border-radius: 9px;
+  opacity: 1;
+  left: 0;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .25s ease-in-out;
+  -moz-transition: .25s ease-in-out;
+  -o-transition: .25s ease-in-out;
+  transition: .25s ease-in-out;
+}
+
+#nav-icon1 span:nth-child(1) {
+  top: 0px;
+}
+
+#nav-icon1 span:nth-child(2) {
+  top: 10px;
+}
+
+#nav-icon1 span:nth-child(3) {
+  top: 20px;
+}
+
+#nav-icon1.open span:nth-child(1) {
+  top: 10px;
+  -webkit-transform: rotate(135deg);
+  -moz-transform: rotate(135deg);
+  -o-transform: rotate(135deg);
+  transform: rotate(135deg);
+}
+
+#nav-icon1.open span:nth-child(2) {
+  opacity: 0;
+  left: -60px;
+}
+
+#nav-icon1.open span:nth-child(3) {
+  top: 10px;
+  -webkit-transform: rotate(-135deg);
+  -moz-transform: rotate(-135deg);
+  -o-transform: rotate(-135deg);
+  transform: rotate(-135deg);
+}
 
 // HEROS
 .hero {
