--- a/assets/css/style-apartamentos.css
+++ b/assets/css/style-apartamentos.css
@@ -7131,7 +7131,7 @@ p.text-spot {
 
 .main-header {
   background: #302b6c;
-  padding: 10px 5%;
+  padding: 0 5%;
   width: 100%; }
   @media only screen and (max-width: 425px) {
     .main-header {
@@ -7505,6 +7505,7 @@ p.text-spot {
   margin-bottom: 50px; }
 
 .card-planta {
+  background: #fff;
   max-width: 1250px;
   width: 100%;
   display: -webkit-box;
