--- a/assets/css/style-lazer.scss
+++ b/assets/css/style-lazer.scss
@@ -7,7 +7,7 @@
 .lazer-itens {
 	width: 100%;
 	max-width: 1105px;
-	padding: 40px 20px;
+	padding: 40px 20px 20px 20px;
 	background: $color-primary;
 	margin-bottom: 80px;
 	color: #fff;
