--- a/assets/css/style-general.css
+++ b/assets/css/style-general.css
@@ -2833,7 +2833,7 @@ p.text-spot { font-family: "supermolotlight"; font-size: 20px; color: #434244; l
 
 .midia-text { font-family: "supermolotregular"; font-size: 16px; margin: 30px 0; line-height: 28px; }
 
-#youtubecover:hover { cursor: pointer; }
+#youtubecover:hover, #youtubelazer:hover { cursor: pointer; }
 
 @media only screen and (max-width: 425px) { .cards { margin-bottom: 20px; } }
 
@@ -2883,7 +2883,7 @@ p.text-spot { font-family: "supermolotlight"; font-size: 20px; color: #434244; l
 
 @media only screen and (max-width: 425px) { .memorial { padding: 20px; } }
 
-.float-chat { padding: 15px 25px 10px 20px; border-radius: 35px; background: #302b6c; color: #fff; font-size: 18px; font-family: "supermolotbold_italic"; text-align: center; position: fixed; bottom: 0px; right: 30px; -webkit-box-shadow: 2px 2px 12px 3px rgba(48, 43, 108, 0.15); box-shadow: 2px 2px 12px 3px rgba(48, 43, 108, 0.15); border: 2px solid #53e3af; opacity: 0; -webkit-transition: all 0.5s ease-in; -o-transition: all 0.5s ease-in; transition: all 0.5s ease-in; }
+.float-chat { padding: 15px 25px 10px 20px; border-radius: 35px; background: #302b6c; color: #fff; font-size: 18px; font-family: "supermolotbold_italic"; text-align: center; position: fixed; bottom: 0px; right: 30px; -webkit-box-shadow: 2px 2px 12px 3px rgba(48, 43, 108, 0.15); box-shadow: 2px 2px 12px 3px rgba(48, 43, 108, 0.15); border: 2px solid #53e3af; opacity: 0; -webkit-transition: all 0.5s ease-in; -o-transition: all 0.5s ease-in; transition: all 0.5s ease-in; z-index: 901; }
 
 @media only screen and (max-width: 425px) { .float-chat { display: none; } }
 
@@ -2891,7 +2891,7 @@ p.text-spot { font-family: "supermolotlight"; font-size: 20px; color: #434244; l
 
 .float-chat_show { bottom: 30px; opacity: 1; }
 
-.float-cta { position: fixed; bottom: 0; width: 100%; max-width: 250px; left: 50%; margin-left: -125px; text-align: center; opacity: 0; -webkit-transition: all 0.5s ease-in; -o-transition: all 0.5s ease-in; transition: all 0.5s ease-in; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-justify-content: space-around; -ms-flex-pack: distribute; justify-content: space-around; }
+.float-cta { position: fixed; bottom: 0; width: 100%; max-width: 250px; left: 50%; margin-left: -125px; text-align: center; opacity: 0; -webkit-transition: all 0.5s ease-in; -o-transition: all 0.5s ease-in; transition: all 0.5s ease-in; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-justify-content: space-around; -ms-flex-pack: distribute; justify-content: space-around; z-index: 900; }
 
 @media only screen and (min-width: 768px) { .float-cta { display: none; } }
 
