Video hero adicionado

--- a/assets/css/style-general.css
+++ b/assets/css/style-general.css
@@ -2811,7 +2811,9 @@ p.text-spot { font-family: "supermolotlight"; font-size: 20px; color: #434244; l
 
 .hero-video { width: 100%; }
 
-.hero-video video { height: 763px; }
+.hero-video video { height: 721px; }
+
+@media only screen and (max-width: 1440px) { .hero-video video { height: 520px; } }
 
 .feature { width: 240px; height: 120px; padding: 0 25px; border-radius: 5px; -webkit-box-shadow: 2px 2px 12px 3px rgba(48, 43, 108, 0.15); box-shadow: 2px 2px 12px 3px rgba(48, 43, 108, 0.15); margin-bottom: 25px; font-family: "supermolotlight"; font-size: 22px; letter-spacing: 0.5px; color: #434244; text-align: center; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -webkit-justify-content: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; }
 
@@ -2831,7 +2833,7 @@ p.text-spot { font-family: "supermolotlight"; font-size: 20px; color: #434244; l
 
 @media only screen and (max-width: 425px) { .ytplayer { width: 100%; height: 230px; } }
 
-.midia-text { font-family: "supermolotregular"; font-size: 16px; margin: 30px 0; line-height: 28px; }
+.midia-text { font-family: "supermolotregular"; font-size: 16px; margin: 30px 0; line-height: 28px; max-width: 600px; margin: 50px auto 20px auto; }
 
 #youtubecover:hover, #youtubelazer:hover { cursor: pointer; }
 
@@ -2853,7 +2855,7 @@ p.text-spot { font-family: "supermolotlight"; font-size: 20px; color: #434244; l
 
 .testimonial { background: #302b6c; padding: 50px 0; margin-top: 50px; margin-bottom: 50px; }
 
-.testimonial-text { font-family: "supermolotregular"; font-size: 18px; line-height: 30px; color: #fff; }
+.testimonial-text { font-family: "supermolotregular"; font-size: 22px; line-height: 30px; color: #fff; margin-top: 50px; }
 
 .cta-stand { width: 100%; max-width: 1000px; border-radius: 5px; overflow: hidden; -webkit-box-shadow: 2px 2px 12px 3px rgba(48, 43, 108, 0.15); box-shadow: 2px 2px 12px 3px rgba(48, 43, 108, 0.15); display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -webkit-justify-content: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; }
 
