--- a/assets/css/style-general.scss
+++ b/assets/css/style-general.scss
@@ -421,7 +421,10 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#302b6c', end
 .hero-video {
 	width: 100%;
 	video {
-	height: 763px;
+	height: 721px;
+	@media #{$laptop-l} {
+		height: 520px;
+	}
 	}
 }
 
@@ -484,6 +487,9 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#302b6c', end
 	font-size: 16px;
 	margin: 30px 0;
 	line-height: 28px;
+	max-width: 600px;
+	margin: 50px auto 20px auto;
+
 }
 #youtubecover, #youtubelazer  {
 	&:hover {
@@ -540,9 +546,10 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#302b6c', end
 }
 .testimonial-text {
 	font-family: $font-regular;
-	font-size: 18px;
+	font-size: 22px;
 	line-height: 30px;
 	color: $white;
+	margin-top: 50px;
 }
 
 // CTA STAND
