--- a/assets/css/style-general.css
+++ b/assets/css/style-general.css
@@ -2855,7 +2855,9 @@ p.text-spot { font-family: "supermolotlight"; font-size: 20px; color: #434244; l
 
 .testimonial { background: #302b6c; padding: 50px 0; margin-top: 50px; margin-bottom: 50px; }
 
-.testimonial-text { font-family: "supermolotregular"; font-size: 22px; line-height: 30px; color: #fff; margin-top: 50px; }
+.testimonial-text { font-family: "supermolotregular"; font-size: 22px; line-height: 30px; color: #fff; margin-top: 40px; }
+
+.testimonial-autor { font-family: "supermolotregular"; font-size: 18px; color: #53e3af; margin-top: 10px; display: inline-block; }
 
 .cta-stand { width: 100%; max-width: 1000px; border-radius: 5px; overflow: hidden; -webkit-box-shadow: 2px 2px 12px 3px rgba(48, 43, 108, 0.15); box-shadow: 2px 2px 12px 3px rgba(48, 43, 108, 0.15); display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -webkit-justify-content: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; }
 
