Home - Hero on mobile

--- a/assets/css/empreendimento.scss
+++ b/assets/css/empreendimento.scss
@@ -26,6 +26,10 @@
 		padding: 20px;
 	}
 }
+.diferenciais-title {
+	color: $color-secundary;
+	margin-top: 20px;
+}
 .implantacao-item {
 	display: inherit;
 	font-size: 18px;
