--- a/assets/css/style-general.css
+++ b/assets/css/style-general.css
@@ -2809,13 +2809,15 @@ p.text-spot { font-family: "supermolotlight"; font-size: 20px; color: #434244; l
 
 .hero-home { width: 100%; height: 763px; background: #302b6c url("../img/hero-home.jpg"); background-size: cover; }
 
-.hero-video { width: 100%; }
+.hero-video { width: 100%; text-align: center; }
 
 .hero-video video { height: 721px; }
 
 @media only screen and (max-width: 1440px) { .hero-video video { height: 520px; } }
 
-@media only screen and (max-width: 425px) { .hero-video { display: none; } }
+@media only screen and (max-width: 425px) { .hero-video video { display: none; } }
+
+@media only screen and (min-width: 768px) { .hero-home-mobile { display: none; } }
 
 .feature { width: 240px; height: 120px; padding: 0 25px; border-radius: 5px; -webkit-box-shadow: 2px 2px 12px 3px rgba(48, 43, 108, 0.15); box-shadow: 2px 2px 12px 3px rgba(48, 43, 108, 0.15); margin-bottom: 25px; font-family: "supermolotlight"; font-size: 22px; letter-spacing: 0.5px; color: #434244; text-align: center; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -webkit-justify-content: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; }
 
