--- a/assets/css/style-lazer.scss
+++ b/assets/css/style-lazer.scss
@@ -93,6 +93,10 @@ text-transform: uppercase;
 	width: 100%;
 	padding: 50px 20px;
 	margin: 50px 0 50px 0;
+	@media #{$mobile-l} {
+		margin-bottom: 0;
+		padding-bottom: 10px;
+	}
 }
 .lazer-exclusivo_title {
 	font-family: $font-bold-italic;
@@ -108,11 +112,18 @@ text-transform: uppercase;
 	padding: 10px;
 	margin: 0 10px;
 	border: 2px solid $color-secundary;
+	@media #{$mobile-l} {
+		display: inline-block;
+		margin-bottom: 20px;
+	}
 }
 
 .lazer-cobertura {
 	margin-top: 80px;
 	margin-bottom: 80px;
+	@media #{$mobile-l} {
+		margin-top: 20px;
+	}
 }
 .implantacao {
 	float: right;
@@ -120,12 +131,18 @@ text-transform: uppercase;
 	font-family: $font-regular;
 	color: $color-primary;
 	margin-top: 30px;
+	@media #{$mobile-l} {
+		text-align: center;
+	}
 }
 .bar-color-implantacao {
 width: 240px;
     height: 5px;
     background: $color-primary;
     display: block;
+    @media #{$mobile-l} {
+    	display: inline-block;
+    }
 }
 .local-beneficios {
 	background: $color-primary;
