--- a/assets/css/style-contato.scss
+++ b/assets/css/style-contato.scss
@@ -31,3 +31,15 @@ label {
 	}
 
 }
+
+.icon-tel-contato {
+	width: 45px;
+	height: 45px;
+	padding: 8px;
+	border-radius: 50%;
+	background: $color-primary;
+	display: inline-block;
+	margin:0 20px 0 0;
+	top: -5px;
+	position: relative;
+}
