--- a/assets/css/style-lazer.scss
+++ b/assets/css/style-lazer.scss
@@ -4,6 +4,10 @@
 .lazer-wrap {
 	margin-top: 20px;
 }
+
+.number-up {
+	font-size: 22px;
+}
 .lazer-itens {
 	width: 100%;
 	max-width: 1105px;
@@ -51,7 +55,7 @@ text-transform: uppercase;
 .swiper-pagination, .swiper-pagination-fraction {
 	border: 2px solid $color-primary;
 	border-radius: 3px;
-	width: 50px !important;
+	width: 75px !important;
 	left: 50% !important;
 	margin-left: -25px;
 	margin-top: 20px;
@@ -119,7 +123,6 @@ text-transform: uppercase;
 }
 
 .lazer-cobertura {
-	margin-top: 80px;
 	margin-bottom: 80px;
 	@media #{$mobile-l} {
 		margin-top: 20px;
