--- a/assets/css/style-lazer.scss
+++ b/assets/css/style-lazer.scss
@@ -5,8 +5,9 @@
 	margin-top: 20px;
 }
 
-.number-up {
+.lazer-subtitle {
 	font-size: 22px;
+	font-family: $font-regular;
 }
 .lazer-itens {
 	width: 100%;
