--- a/assets/css/style-apartamentos.scss
+++ b/assets/css/style-apartamentos.scss
@@ -195,6 +195,17 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#302b6c', end
 	color: $white !important;
 }
 
+.apto-desc-line {
+	width: 95%;
+	height: 2px;
+	position: absolute;
+	bottom: -25px;
+	background: $color-primary;
+	@media #{$mobile-l} {
+		display: none;
+	}
+}
+
 .feature-apto {
 	font-size: 16px;
 }
@@ -509,6 +520,9 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#302b6c', end
 
 .cta-apto_image {
 	margin-top: 50px;
+	@media #{$mobile-l} {
+		margin-bottom: 50px;
+	}
 }
 .cta-apto_title {
 	color: $white;
