--- a/assets/css/style-general.css
+++ b/assets/css/style-general.css
@@ -2779,9 +2779,9 @@ p.text-spot { font-family: "supermolotlight"; font-size: 20px; color: #434244; l
 
 .nav-header ul li a { text-decoration: none; color: #fff; }
 
-@media only screen and (max-width: 425px) { .nav-header { position: absolute; margin-top: 0; top: 0; width: 100%; height: 100vh; padding-top: 200px; background: #302b6c; z-index: 10; -webkit-transform: translateX(120%); -ms-transform: translateX(120%); transform: translateX(120%); -webkit-transition: -webkit-transform 0.5s ease; transition: -webkit-transform 0.5s ease; -o-transition: transform 0.5s ease; transition: transform 0.5s ease; transition: transform 0.5s ease, -webkit-transform 0.5s ease; } }
+@media only screen and (max-width: 425px) { .nav-header { position: absolute; margin-top: 0; top: 0; width: 100%; height: 100vh; padding-top: 100px; background: #302b6c; z-index: 10; -webkit-transform: translateX(120%); -ms-transform: translateX(120%); transform: translateX(120%); -webkit-transition: -webkit-transform 0.5s ease; transition: -webkit-transform 0.5s ease; -o-transition: transform 0.5s ease; transition: transform 0.5s ease; transition: transform 0.5s ease, -webkit-transform 0.5s ease; } }
 
-.nav-header_open { -webkit-transform: translateX(0%); -ms-transform: translateX(0%); transform: translateX(0%); }
+.nav-header_open { position: relative; -webkit-transform: translateX(0%); -ms-transform: translateX(0%); transform: translateX(0%); }
 
 .nav-separator { color: #53e3af; margin-left: 20px; }
 
@@ -2838,6 +2838,8 @@ p.text-spot { font-family: "supermolotlight"; font-size: 20px; color: #434244; l
 @media only screen and (max-width: 425px) { .ytplayer { width: 100%; height: 230px; } }
 
 .midia-text { font-family: "supermolotregular"; font-size: 16px; margin: 30px 0; line-height: 28px; max-width: 600px; margin: 50px auto 20px auto; }
+
+@media only screen and (max-width: 425px) { .midia-text { padding: 0 20px; } }
 
 #youtubecover:hover, #youtubelazer:hover { cursor: pointer; }
 
