--- a/assets/css/style-general.scss
+++ b/assets/css/style-general.scss
@@ -307,7 +307,7 @@ $shadow: 2px 2px 12px 3px rgba(48, 43, 108, 0.15);
     top: 0;
     width: 100%;
     height: 100vh;
-    padding-top: 200px;
+    padding-top: 100px;
     background: $color-primary;
     z-index: 10;
     transform: translateX(120%);
@@ -316,6 +316,7 @@ $shadow: 2px 2px 12px 3px rgba(48, 43, 108, 0.15);
 }
 
 .nav-header_open {
+	position: relative;
   transform: translateX(0%);
 }
 
@@ -500,6 +501,9 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#302b6c', end
 	line-height: 28px;
 	max-width: 600px;
 	margin: 50px auto 20px auto;
+	@media #{$mobile-l} {
+		padding: 0 20px;
+	}
 
 }
 #youtubecover, #youtubelazer  {
