cta apto padding

--- a/assets/css/style-apartamentos.scss
+++ b/assets/css/style-apartamentos.scss
@@ -505,6 +505,9 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#302b6c', end
 	letter-spacing: 0.3px;
 	font-family: $font-regular;
 }
+ .decorado-info{
+ 	padding-right: 20px;
+ }
 .decorado-agendar {
 	color: $color-secundary;
 	font-size: 22px;
