--- a/assets/css/bootstrap/bootstrap.scss
+++ b/assets/css/bootstrap/bootstrap.scss
@@ -14,7 +14,7 @@
 @import "images";
 @import "code";
 @import "grid";
-@import "tables";
+// @import "tables";
 @import "forms";
 @import "buttons";
 @import "transitions";
@@ -25,17 +25,17 @@
 @import "nav";
 @import "navbar";
 @import "card";
-@import "breadcrumb";
-@import "pagination";
-@import "badge";
-@import "jumbotron";
-@import "alert";
-@import "progress";
+// @import "breadcrumb";
+// @import "pagination";
+// @import "badge";
+// @import "jumbotron";
+// @import "alert";
+// @import "progress";
 @import "media";
 @import "list-group";
-@import "close";
-@import "modal";
-@import "tooltip";
-@import "popover";
-@import "carousel";
+// @import "close";
+// @import "modal";
+// @import "tooltip";
+// @import "popover";
+// @import "carousel";
 @import "utilities";
