Novos códigos do google

--- a/assets/css/bootstrap/bootstrap.scss
+++ b/assets/css/bootstrap/bootstrap.scss
@@ -8,7 +8,7 @@
 @import "functions";
 @import "variables";
 @import "mixins";
-@import "print";
+// @import "print";
 @import "reboot";
 @import "type";
 @import "images";
@@ -18,7 +18,7 @@
 @import "forms";
 @import "buttons";
 @import "transitions";
-@import "dropdown";
+// @import "dropdown";
 @import "button-group";
 @import "input-group";
 @import "custom-forms";
